[package]
name = "packattack"
version = "0.1.0"
authors = ["Ethan Spurlock <ethan@spurlock.io>"]
edition = "2018"

[dependencies]
bitreader_async = { path = "C:\\Users\\Ethan\\Desktop\\bitreader-async" }

[dependencies.async-std]
version = "1.2.0"
features = ["attributes"]

[dependencies.async-trait]
version = "0.1.21"
