[package]
name = "packattack"
version = "0.1.0"
authors = ["Ethan Spurlock <ethan@spurlock.io>"]
edition = "2018"
description = "A parser-combinator library for writing concise and safe binary parsers."
license = "MIT"
keywords = ["read","async", "BufReader", "binary"]
repository = "https://github.com/vectorizer-labs/packattack"

[dependencies]
bitreader_async = "0.2.0"
packattack-derive = {path = "C:\\Users\\Ethan\\Desktop\\packattack-derive"}

[dependencies.async-std]
version = "1.2.0"
features = ["attributes"]

[dependencies.async-trait]
version = "0.1.21"
